@@ -51,6 +51,11 @@ Bug Fixes
 
 * SOLR-2955: Fixed IllegalStateException when querying with group.sort=score desc in sharded
              environment. (Steffen Elberg Godskesen, Martijn van Groningen)
+
+* SOLR-1730: Made it clearer when a core failed to load as well as better logging when the
+  QueryElevationComponent fails to properly initialize (gsingers)
+
+* SOLR-1520: QueryElevationComponent now supports non-string ids (gsingers)
   
 Other Changes
 ----------------------
